<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="25dp"
	tools:context=".Activities.SignUpActivity">
	<TextView
		android:layout_marginTop="10dp"
		android:id="@+id/tv_sign_up"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/poppins_bold"
		android:text="@string/sign_up"
		android:textColor="@color/black"
		android:textSize="28sp"/>
	<TextView
		android:layout_below="@id/tv_sign_up"
		android:id="@+id/form_fill_line"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/poppins_light"
		android:text="@string/please_fill_in_this_form_to_create_account"
		android:textColor="@color/black"
		android:textSize="14sp"/>
	<LinearLayout
		android:id="@+id/ll_fields"
		android:layout_marginTop="10dp"
		android:paddingStart="30dp"
		android:paddingEnd="30dp"
		android:layout_centerHorizontal="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/form_fill_line"
		android:orientation="vertical">
		<EditText
			android:id="@+id/et_first_name"
			android:inputType="text"
			android:drawableStart="@drawable/ic_name"
			android:drawablePadding="15dp"
			android:hint="@string/first_name"
			android:textSize="15sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/et_last_name"
			android:inputType="text"
			android:layout_marginTop="5dp"
			android:drawableStart="@drawable/ic_name"
			android:drawablePadding="15dp"
			android:hint="@string/last_name"
			android:textSize="15sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/et_email"
			android:inputType="textEmailAddress"
			android:layout_marginTop="5dp"
			android:drawableStart="@drawable/ic_username"
			android:drawablePadding="15dp"
			android:hint="@string/email"
			android:textSize="15sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/et_password"
			android:layout_marginTop="5dp"
			android:drawableStart="@drawable/ic_password"
			android:drawablePadding="15dp"
			android:hint="@string/password"
			android:textSize="15sp"
			android:inputType="textPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/et_confirm_password"
			android:inputType="textPassword"
			android:layout_marginTop="5dp"
			android:drawableStart="@drawable/ic_password"
			android:drawablePadding="15dp"
			android:hint="@string/confirm_password"
			android:textSize="15sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<Button
			android:id="@+id/button_sign_up"
			android:fontFamily="@font/poppins_semi_bold"
			android:padding="14dp"
			android:text="@string/sign_up"
			android:textAllCaps="false"
			android:layout_marginTop="30dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
		android:layout_centerHorizontal="true"
		android:layout_below="@id/ll_fields"
		android:layout_marginTop="5dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView
			android:textColor="@color/black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/already_a_user"
			android:textSize="14sp"
			android:fontFamily="@font/poppins_semi_bold"/>
		<TextView
			android:id="@+id/tv_sign_in"
			android:layout_marginStart="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sign_in_underlined"
			android:textColor="@color/black"
			android:textSize="14sp"
			android:fontFamily="@font/poppins_semi_bold"/>
	</LinearLayout>
</RelativeLayout>