<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="25dp"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".Activities.MainActivity">
	<TextView
		android:layout_marginTop="25dp"
		android:id="@+id/tv_sign_in"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/poppins_semi_bold"
		android:text="@string/sign_in"
		android:textColor="@color/black"
		android:layout_centerHorizontal="true"
		android:textSize="35sp"/>
	<EditText
		android:layout_marginTop="35dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/tv_sign_in"
		android:backgroundTint="@color/black"
		android:textColor="@color/black"
		android:hint="@string/username"
		android:drawableStart="@drawable/ic_username"
		android:drawablePadding="16dp"
		android:paddingStart="10dp"
		android:paddingEnd="10dp"
		android:paddingBottom="20dp"
		android:inputType="textEmailAddress"
		android:id="@+id/et_username"
		android:autofillHints="@null" />
	
	<EditText
		android:id="@+id/et_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/et_username"
		android:layout_marginTop="25dp"
		android:autofillHints="@null"
		android:backgroundTint="@color/black"
		android:textColor="@color/black"
		android:drawableStart="@drawable/ic_password"
		android:drawablePadding="16dp"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:paddingStart="10dp"
		android:paddingEnd="10dp"
		android:paddingBottom="20dp" />
	
		<Button
			android:id="@+id/button_Sign_in"
			android:layout_marginTop="35dp"
			android:layout_below="@id/et_password"
			android:fontFamily="@font/poppins_semi_bold"
			android:padding="14dp"
			android:textAllCaps="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sign_in" />
	<LinearLayout
		android:layout_marginTop="16dp"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/button_Sign_in">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:text="@string/new_user"
			android:textSize="15sp"
			android:fontFamily="@font/poppins_semi_bold"/>
		<TextView
			android:id="@+id/tv_sign_up"
			android:layout_marginStart="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:text="@string/sign_up_underlined"
			android:textSize="15sp"
			android:fontFamily="@font/poppins_semi_bold"/>
	</LinearLayout>
</RelativeLayout>