<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Activities.AddImageDetailsActivity">
	
	<ImageView
		android:id="@+id/iv_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:src="@drawable/ic_back" />
	
	<ScrollView
		android:id="@+id/center_section"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/iv_back"
		android:isScrollContainer="true">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:padding="30dp">
			
			<EditText
				android:id="@+id/et_location"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/location_of_image"
				android:inputType="text" />
			
			<EditText
				
				android:id="@+id/et_description"
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:gravity="top"
				android:hint="@string/description"
				android:inputType="text|textMultiLine" />
			
			<RelativeLayout
				android:id="@+id/rl_pic_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/doted_border"
				android:orientation="vertical"
				android:padding="16dp">
				
				<TextView
					android:id="@+id/tv_add_picture"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:drawablePadding="8dp"
					android:text="@string/add_picture"
					app:drawableLeftCompat="@drawable/ic_file" />
				
				<ImageView
					android:id="@+id/iv_image"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:adjustViewBounds="true"
					android:contentDescription="@null"
					android:cropToPadding="false"
					android:scaleType="fitXY" />
			</RelativeLayout>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Button
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cancel"
					android:id="@+id/button_cancel"
					android:layout_marginTop="10dp" />
				<Button
					android:layout_marginStart="25dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/add"
					android:id="@+id/button_ok"
					android:layout_marginTop="10dp" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>